--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # Connection for prisma
-DATABASE_URL="postgresql://username:password@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://admin:password@localhost:5432/nest-social-api?schema=public"
 
 # Postgres config variables
-POSTGRES_USER=username
+POSTGRES_USER=admin
 POSTGRES_PASSWORD=password
-POSTGRES_DB="mydb"
+POSTGRES_DB="nest-social-api"
 
 # Cors config
 CORS_ORIGIN="http://localhost:5173"
