--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "arrowParens": "avoid",
   "bracketSameLine": false,
   "bracketSpacing": true,
-  "endOfLine": "lf",
+  "endOfLine": "crlf",
   "singleQuote": true,
   "printWidth": 100,
   "tabWidth": 2,
